fix z-index

--- a/src/ui/components/FloatMenu/FloatMenu.scss
+++ b/src/ui/components/FloatMenu/FloatMenu.scss
@@ -7,7 +7,7 @@
     bottom: 16px;
     left: 0;
     right: 0;
-    z-index: 97;
+    z-index: 7;
     width: 100%;
 
     transition:
